@@ -1,3 +1,6 @@
+1996.	[bug]		nsupdate: if a zone has been specified it should
+			appear in the output of 'show'. [RT #15797]
+
 1995.	[bug]		'host' was reporting multiple "is an alias" messages.
 			[RT #15702]
 
